--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Jia Zeng's Homepage"
-description              : "Dedicated to realizing embodied AGI."
+description              : "Dedicated to realizing Embodied AGI."
 repository               : "increase24/increase.github.io"
 google_scholar_stats_use_cdn : true
 
