update github info

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Jia Zeng's Homepage"
 description              : "Dedicated to realizing Embodied AGI."
-repository               : "increase24/increase.github.io"
+repository               : "Zeng-Jia/Zeng-Jia.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         : 
   foursquare       : 
-  github           : "increase24"
+  github           : "Zeng-Jia"
   google_plus      :
   keybase          :
   instagram        : 
